continue css work

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,4 @@
  @import'./components/session/user_actions.scss';
  @import './components/session/splash_info.scss';
  @import './components/session/demo_login.scss';
+ @import './components/session/session_form.scss';
