--- a/app/assets/stylesheets/components/session/splash_info.scss
+++ b/app/assets/stylesheets/components/session/splash_info.scss
@@ -5,6 +5,7 @@ $oswald: 'Oswald', sans serif;
     width: 150px;
     height: auto;
     display: inline-block;
+    padding-left: 5px
 }
 .splash-info {
 
