--- a/app/assets/stylesheets/components/session/demo_login.scss
+++ b/app/assets/stylesheets/components/session/demo_login.scss
@@ -1,23 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@100;300;500;700&display=swap');
 $oswald: 'Oswald', sans serif;
 
-   .demo-login {
-        text-decoration: none;
-        padding-top: 20px;
+.demo-login-link {
 
-        .demo-login-link {
-            color: white;
-            padding-top: 12px;
-            padding-bottom: 12px;
-            padding-left: 94px;
-            padding-right: 94px;
-            border-radius: 3px;
-            text-decoration: none;
-            justify-content: center;
-            background-color: rgb(195, 93, 71);
-        }
-        
-        .demo-login-link:hover {
-            background-color:rgb(130, 190, 194);
-        }
-    }
+
+    font-family: $oswald;
+    align-items: center;
+    font-size: 16px;
+    color: white;
+    padding-top: 11px;
+    padding-bottom: 13px;
+    padding-left: 94px;
+    padding-right: 94px;
+    border-radius: 3px;
+    text-decoration: none;
+    justify-content: center;
+    background-color: rgb(195, 93, 71);
+    border: 1px solid white;
+}
+
+.demo-login-link:hover {
+    background-color:rgb(130, 190, 194);
+}
