--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,4 @@
  @import './components/session/splash_info.scss';
  @import './components/session/demo_login.scss';
  @import './components/session/session_form.scss';
+ @import './components//session/information.scss'
