--- a/app/assets/stylesheets/components/session/splash_info.scss
+++ b/app/assets/stylesheets/components/session/splash_info.scss
@@ -4,7 +4,7 @@ $oswald: 'Oswald', sans serif;
 .infinote-logo_1 {
     width: 150px;
     height: auto;
-    display: inline-block;
+    // display: inline;
     padding-left: 5px
 }
 .splash-info {
