--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,4 +20,5 @@
  @import './components/session/demo_login.scss';
  @import './components/session/session_form.scss';
  @import './components//session/information.scss';
- @import './components//session/splash_header.scss'
+ @import './components/session/splash_header.scss';
+ @import './components/notebooks/notebook_index.scss'
