--- a/app/assets/stylesheets/components/session/session_form.scss
+++ b/app/assets/stylesheets/components/session/session_form.scss
@@ -85,12 +85,12 @@ $oxygen: 'Oxygen';
     };
 };
 
-.session-form-error-ul, .redirect-login{
+.error-ul, .redirect-login{
     font-size: 14px;
     text-align: center;
     font-size: 14px;
 }
-.session-form-error-ul {
+.error-ul {
     color: red;
     width: 181px
 }
