--- a/app/assets/stylesheets/components/notebooks/notebook_index.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap');
 $oxygen: 'Oxygen';
 .notebook {
+    font-family: $oxygen;
     margin-left: 20px;
     margin-right: 20px;
-    font-family: $oxygen;
     .notebook-header {
         font-weight: bolder;
         display: flex;
@@ -17,11 +17,15 @@ $oxygen: 'Oxygen';
         .notebooks-title {
             flex: 1;
             font-size: 20px;
-            padding-right: 12px;
+            // padding-right: 12px;
+             margin-left: 20px;
+            // margin-right: 200   px;
         }
         .notebooks-search-bar-div {
             align-items: center;
             border-radius: 4px;
+            margin-right: 20px;
+
             display: flex;
             .notebooks-search-bar{
                 display: inline-block;
@@ -38,6 +42,7 @@ $oxygen: 'Oxygen';
         margin: 10px 0;
         min-height: 24px;
         height: 24px;
+        margin-left: 20px;
         // margin-bottom: 20px;
         .notebook-count {
             margin-right: auto;
@@ -56,6 +61,7 @@ $oxygen: 'Oxygen';
             outline: none;
             background-color: Transparent;
             border: none;
+            margin-right: 20px
         }
     };
 
@@ -68,6 +74,9 @@ $oxygen: 'Oxygen';
     height: 100%;
     font-size: 14px;
     font-family: $oxygen;
+    // margin-left: 20px;
+    // margin-right: 20px;
+
 
     .notebook-sort {
         height: 37px;
@@ -116,6 +125,7 @@ $oxygen: 'Oxygen';
         direction: ltr;
         height: auto;
         width: 780px;
+        
     }
     .sort-row {
         height: 40px;
@@ -147,43 +157,28 @@ $oxygen: 'Oxygen';
         color: black
     }
 }
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-}
-
-// .dropdown:active .dropdown-content {
-//     display: block;
-// }
-
-.dropdown-content {
-    display: block
-}
-// .modal-hidden {
-//     background-color: black;
-// };
+//MODAL
 .modal {
+    outline-style: none;
     position: absolute;
     top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(42, 51, 60, 0.4);
-    
-    
+    // padding: 20px 25px 18px;
     
     .modal-contents {
-        background-color: pink;
+        min-width: 450px;
+        max-width: 650px;
+        min-height: 200px;
+        background-color: white;
+        border-radius: 4px;
         padding: 2rem 4rem;
-    }
+    };
     .modal-close {
         display: flex;
         justify-content: flex-end;
@@ -191,9 +186,78 @@ $oxygen: 'Oxygen';
         margin-top: -1rem;
         cursor: pointer;
         
+    };
+    .modal-create-header {
+        padding: 20px 25px 18px;
     }
     
+    .modal-create-title {
+        font-size: 18px;
+        font-weight: bold;
+
+    };
+    .modal-close-span {
+        color: #737373;
+    }
+    .modal-close-span:hover {
+        color: black;
+    }
+    .modal-create-info {
+        // line-height: 20px;
+        padding-top: 15px;
+        font-size: 14px;
+    };
+    .modal-create-form {
+        padding: 0px 25px 0px 25px
+    }
+    .modal-name-label {
+        font-size: 12px;
+        display: block;
+        margin-bottom: 100px;
+    }
+    .modal-title-input {
+        margin-top: 10px;
+        font-size: 16px;
+        width: 100%;
+        padding: 10px 10px;
+    }
+    .modal-buttons {
+        border-top: 2px solid #d9d9d9;
+        padding: 20px 25px;
+        display: flex;
+        justify-content: flex-end;
+    };
+    .modal-cancel {
+        font-family: $oxygen;
+        cursor: pointer;
+        margin: 0 10px 0 0;
+        color: #737373;
+        padding: 10px 15px;
+        background: white;
+        border-width: 1px;
+        border-radius: 4px;
+        
+    };
+    .modal-cancel:hover {
+        background: white;
+        color: black;
+    };
+
+    .modal-submit {
+        font-family: $oxygen;
+        background: rgb(195, 93, 71);
+        vertical-align: middle;
+        display: inline-flex;
+        border-radius: 4px;
+        padding: 10px 20px;
+        border: none;
+        color: white
+    };
+    .modal-submit:hover {
+        background-color:rgb(130, 190, 194);
+    }
 }
 .modal-hidden {
         display: none;
     }
+
