--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,4 +21,5 @@
  @import './components/session/session_form.scss';
  @import './components//session/information.scss';
  @import './components/session/splash_header.scss';
- @import './components/notebooks/notebook_index.scss'
+ @import './components/notebooks/notebook_index.scss';
+ @import './components/notebooks/create_notebook_modal.scss'
