--- a/app/assets/stylesheets/components/notebooks/create_notebook_modal.scss
+++ b/app/assets/stylesheets/components/notebooks/create_notebook_modal.scss
@@ -45,6 +45,7 @@ $oxygen: 'Oxygen';
         .modal-close-span {
             color: #737373;
             cursor: pointer;
+            font-size: 14px
             // margin: 1rem 2rem;
     
         }
