--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
  */
 
  @import './reset.scss';
+//  @import './fonteawesome_scss/fontawesome.scss';
+//  @import './fonteawesome_scss/solid.scss';
  @import'./components/session/user_actions.scss';
  @import './components/session/splash_info.scss';
  @import './components/session/demo_login.scss';
@@ -22,4 +24,5 @@
  @import './components//session/information.scss';
  @import './components/session/splash_header.scss';
  @import './components/notebooks/notebook_index.scss';
+ @import './components/notebooks/notebook_index_item.scss';
  @import './components/notebooks/create_notebook_modal.scss'
