--- a/app/assets/stylesheets/components/notebooks/notebook_index.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index.scss
@@ -2,8 +2,8 @@
 $oxygen: 'Oxygen';
 .notebook {
     font-family: $oxygen;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
     .notebook-header {
         font-weight: bolder;
         display: flex;
@@ -14,24 +14,37 @@ $oxygen: 'Oxygen';
         font-size: 15px;
         outline-style: none;
         box-sizing: border-box;
+        justify-content: space-between;
         .notebooks-title {
             flex: 1;
             font-size: 20px;
             // padding-right: 12px;
-             margin-left: 20px;
+            //  margin-left: 20px;
             // margin-right: 200   px;
         }
         .notebooks-search-bar-div {
             align-items: center;
             border-radius: 4px;
-            margin-right: 20px;
+            // margin-right: 20px;
+
+
+            
 
             display: flex;
+            .notebooks-search-bar-icon{
+                position: absolute;
+                right: 40px;
+
+                // display: inline-block;
+                // font-size: 14px;
+                // outline: none;
+                // padding: 8px
+            }
             .notebooks-search-bar{
                 display: inline-block;
                 font-size: 14px;
                 outline: none;
-                padding: 8px
+                padding: 8px 10px;
             }
         }
     }
@@ -42,6 +55,8 @@ $oxygen: 'Oxygen';
         margin: 10px 0;
         min-height: 24px;
         height: 24px;
+      
+
         .notebook-count {
             margin-right: auto;
             vertical-align: middle;
@@ -52,17 +67,24 @@ $oxygen: 'Oxygen';
             font-weight: bolder;
             line-height: 24px;
             color:rgb(195, 93, 71);
-            padding: 0;
+            padding: 2px 0 0 0;
             vertical-align: middle;
             float: right;
             cursor: pointer;
             outline: none;
             background-color: Transparent;
             border: none;
-            margin-right: 20px
+            .notebook-icon {
+                padding: 1px 5px 0 0;
+                color:rgb(195, 93, 71);
+                vertical-align: text-top;
+                cursor: pointer;
+                font-size: 18px
+            
+            }
         }
     };
-
+    
 } 
 
 
@@ -125,20 +147,7 @@ $oxygen: 'Oxygen';
         width: 780px;
         
     }
-    .sort-row {
-        height: 40px;
-        line-height: 20px;
-        width: 100%;
-        padding-top: 20px;
-        padding-bottom: 50px;
-        vertical-align: middle;
-        position:relative;
-        text-decoration: none;
-        .sort-action-row {
-            padding: .5rem;
-            text-align: end;
-        }
-    };
+
     tr:nth-child(2n+2){
         background-color: #f8f8f8;
     };
@@ -149,9 +158,15 @@ $oxygen: 'Oxygen';
     .notebook-author {
         overflow: hidden;
     }
+    .notebook-sort-link-notebook {
+        color: black;
+        font-size: 18px;
+        vertical-align: text-bottom;
+        padding-right: 5px;
+    }
     .notebook-sort-link {
         text-decoration: none;
-        color: black
+        color: black;
     }
     .notebook-sort-link:hover {
         text-decoration: underline;
@@ -160,64 +175,19 @@ $oxygen: 'Oxygen';
 }
 
 
-
-.test-dropdown{
-    // position: absolute;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-}
-
-.action-dropdown-button {
-    // position: relative;
-    // width: 200px;
-    // height: 60px;
-    // font-size: 24px;
-    // background: #2196f3;
-    border: none;
-    box-shadow: none;
-    outline: none;
-    cursor: pointer;
-    color: #000;
-}
-
-.action-dropdown-ul {
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    right: 1.75%;
-    top: 24.5%;
-    background: #ccc;
-    transform: perspective(1000px) rotateX(-90deg);
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-
-}
-
-.action-dropdown-ul.active {
-    transform: perspective(1000px) rotateX(0deg);
-
-}
-// .action-dropdown-ul li {
-    
-// }
-.action-dropdown-ul li { 
-    list-style: none;
-    font-family: $oxygen;
-    font-size: 14px;
-    font-weight: bolder;
+nav#test-primary-wrapper {
     width: 100%;
-    display:block;
-    padding: 8px 30px;
-    text-align: center;
-    text-decoration: none;
-    background: #f8f8f8;
-    color: #000;
-    cursor: pointer;
-    // border-bottom: 1px solid rgba(0,0,0,.2);
-    text-align: left;
-}
-
-.action-dropdown-ul li:hover { 
-    background-color: #f1f1f1;
+    float: left;
+    border: 1px solid grey;
+    background-color: pink;
+    li {
+        border-right: 1px solid #ccc;
+    }
+    a {
+        display: block;
+        padding: 20px;
+        text-decoration: none;
+        color: #555;
+    }
 
 }
