--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,4 +25,5 @@
  @import './components/session/splash_header.scss';
  @import './components/notebooks/notebook_index.scss';
  @import './components/notebooks/notebook_index_item.scss';
- @import './components/notebooks/create_notebook_modal.scss'
+ @import './components/notebooks/create_notebook_modal.scss';
+ @import './components//sidebar/sidebar.scss'
