Styling changes, add grid

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
  @import './components/session/session_form.scss';
  @import './components//session/information.scss';
  @import './components/session/splash_header.scss';
+ @import './components/user_landing.scss';
  @import './components/notebooks/notebook_index.scss';
  @import './components/notebooks/notebook_index_item.scss';
  @import './components/notebooks/create_notebook_modal.scss';
