--- a/app/assets/stylesheets/components/notebooks/notebook_index.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index.scss
@@ -2,43 +2,37 @@
 $oxygen: 'Oxygen';
 .notebook {
     font-family: $oxygen;
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 98.5%;
+    display: grid;
+
     .notebook-header {
+        //
         font-weight: bolder;
         display: flex;
-        width: 100%;
         min-height: 80px;
         align-items: center;
-        margin-left: auto;
         font-size: 15px;
         outline-style: none;
-        box-sizing: border-box;
         justify-content: space-between;
         .notebooks-title {
-            flex: 1;
             font-size: 20px;
-            // padding-right: 12px;
-            //  margin-left: 20px;
-            // margin-right: 200   px;
+            padding-right: 12px;
+            margin-left: 20px;
         }
+
         .notebooks-search-bar-div {
             align-items: center;
             border-radius: 4px;
             // margin-right: 20px;
-
-
-            
-
             display: flex;
             .notebooks-search-bar-icon{
                 position: absolute;
                 right: 40px;
 
-                // display: inline-block;
-                // font-size: 14px;
-                // outline: none;
-                // padding: 8px
+                display: inline-block;
+                font-size: 14px;
+                outline: none;
+                padding: 8px
             }
             .notebooks-search-bar{
                 display: inline-block;
@@ -55,6 +49,7 @@ $oxygen: 'Oxygen';
         margin: 10px 0;
         min-height: 24px;
         height: 24px;
+        margin-left: 20px;
       
 
         .notebook-count {
@@ -65,13 +60,10 @@ $oxygen: 'Oxygen';
         .new-notebook-button {
             font-size: 15px;
             font-weight: bolder;
-            line-height: 24px;
             color:rgb(195, 93, 71);
             padding: 2px 0 0 0;
             vertical-align: middle;
-            float: right;
             cursor: pointer;
-            outline: none;
             background-color: Transparent;
             border: none;
             .notebook-icon {
@@ -85,17 +77,17 @@ $oxygen: 'Oxygen';
         }
     };
     
-} 
+
+
 
 
 .notebook-table {
     border-top: 2px solid #5b6b70;
-    width: 100%;
-    height: 100%;
+    overflow: auto;
+    height: 100vh;
     font-size: 14px;
     font-family: $oxygen;
-    // margin-left: 20px;
-    // margin-right: 20px;
+    margin-left: 20px;
 
 
     .notebook-sort {
@@ -105,47 +97,35 @@ $oxygen: 'Oxygen';
         font-weight: lighter;
         color: #bcbcbc;
         background-color: #f8f8f8;
-        flex-basis: 36px;
-        // display: flex;
-        justify-content: space-between;
+    
         
         .sort-title {
             cursor: pointer;
-            padding: .5rem;
-            flex-basis: 30%;
-            display: flex;
-            flex: 1;
+          
             text-align: left;
         };
         
         .sort-cb {
-            // display: flex;
             cursor: pointer;
-            flex: 1;
             text-align: left;
         };
         
         .sort-update {
             cursor: pointer;
-            flex: 1;
             text-align: left;
         };
         
         .sort-action {
-            flex: 1;
             text-align: end;
             cursor: pointer;
         };
     };
 
     .sort-body{
-        // color: pink
         position: relative;
         box-sizing: border-box;
         direction: ltr;
-        height: auto;
-        width: 780px;
-        
+        height: auto;        
     }
 
     tr:nth-child(2n+2){
@@ -173,21 +153,4 @@ $oxygen: 'Oxygen';
         color: black
     }
 }
-
-
-nav#test-primary-wrapper {
-    width: 100%;
-    float: left;
-    border: 1px solid grey;
-    background-color: pink;
-    li {
-        border-right: 1px solid #ccc;
-    }
-    a {
-        display: block;
-        padding: 20px;
-        text-decoration: none;
-        color: #555;
-    }
-
 }
