--- a/app/assets/stylesheets/components/sidebar/sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/sidebar.scss
@@ -1,16 +1,15 @@
 
 .sidebar {
-    position: relative;
-    height: 100vh;
-    max-width: 60px;
-    width: 60px;
-    overflow: hidden;
-    background: #000;
+    position: static;
+    height: 100%;
     display: flex;
+    max-width: 60px;
+    // overflow: hidden;
+    background: #000;
     flex-direction: column;
     color: white;
-    height: 100vh;
- 
+    // height: 200vh;
+    display: grid; 
     .sidebar-user {
         height: 56px;
         display: flex;
@@ -50,7 +49,7 @@
             border-radius: 50%;
         }
         .sidebar-new {
-             cursor: pointer;
+            cursor: pointer;
             width: 38px;
             height: 38px;
             border: 3px solid #000;
@@ -60,7 +59,7 @@
             text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
             font: 30px Arial, sans-serif;
             border-radius: 50%;
-    
+            
         }
     }
     .buttons-2 {
@@ -75,17 +74,26 @@
         // padding: 4px 11px 4px 11px;
         // background: transparent;
         // border: none;
-        // cursor: pointer;
+        cursor: pointer;
         // overflow: hidden;  
+        text-decoration: none;
         color: #ccc;
+        border-bottom-style: none;
         // width: 100%;
         li {
+            // background-color: white;
+             color: white;
+            text-decoration: none;
             padding-bottom: 10px;
             padding-top:10px;
             padding-left: 20px;
         }
         li:hover {
             background-color: grey;
+        }
+        a {
+            text-decoration: none;
+            color: white;
         }
 
     }
