--- a/app/assets/stylesheets/components/notebooks/notebook_show.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_show.scss
@@ -1,140 +1,417 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap');
 $oxygen: 'Oxygen';
-.notebook-show-wrapper{
-    display: grid;
-    font-family: $oxygen;
-    overflow:scroll;
-    position: relative;
-    width: 381px;
-    // height: 100%;
-    height: 100vh;
-    max-width: 880px;
-    min-width: 280px;
-    flex-shrink: 0;
-    border-right: 1px solid #e6e6e6;
-    flex-direction: column;
+// .notebook-show-wrapper{
+//     display: grid;
+//     grid-template-columns: 381px 381px;
+//     font-family: $oxygen;
+//     overflow:scroll;
+//     position: relative;
+//     width: 381px;
+//     height: 100vh;
+//     max-width: 880px;
+//     min-width: 280px;
+//     flex-shrink: 0;
+//     border-right: 1px solid #e6e6e6;
+//     flex-direction: column;
 
-    .notebook-show-notes {
-        flex-direction: column;
-        height: 100%;
-        display: flex;
-        position: relative;
-        flex-wrap: nowrap;
-        background: #f8f8f8;
-        background-color: #f8f8f8;
-    }
-    .notebook-show-header {
-        padding: 20px 16px 20px 24px;
-        border-bottom: 1px solid #e6e6e6;
-        vertical-align: baseline;
-        // display: block
-        .ellipsis-icon {
-            color: #737373;
-            font-weight: light;
-            font-size: 14px
-        };
-    .action-dropdown-button {
-        border: none;
-        box-shadow: none;
-        outline: none;
-        cursor: pointer;
-        color: #000;
-    }
-    .action-dropdown-ul {
-        position: absolute;
-        margin: 0;
-        padding: 0;
-        left: 188px;
-        top: 80px;
-        background: #ccc;
-        transform: rotateX(-90deg);
-        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-        z-index: 1;
-    }
-    .action-dropdown-ul.active {
-        transform: rotateX(0deg);
+//     .notebook-show-notes {
+//         // display: flex;
+//         flex: 1;
+//         min-height: 280px;
+//         flex-direction: column;
+//         justify-content: left;
+//         height: 100%;
+//         position: relative;
+//         flex-wrap: nowrap;
+//         background: #f8f8f8;
+//         background-color: #f8f8f8;
+//     }
+//     .notebook-show-header {
+//         padding: 20px 16px 20px 24px;
+//         border-bottom: 1px solid #e6e6e6;
+//         vertical-align: baseline;
+//         // display: block
+//         .ellipsis-icon {
+//             color: #737373;
+//             font-weight: light;
+//             font-size: 14px
+//         };
+//     .action-dropdown-button {
+//         border: none;
+//         box-shadow: none;
+//         outline: none;
+//         cursor: pointer;
+//         color: #000;
+//     }
+//     .action-dropdown-ul {
+//         position: absolute;
+//         margin: 0;
+//         padding: 0;
+//         left: 188px;
+//         top: 80px;
+//         background: #ccc;
+//         transform: rotateX(-90deg);
+//         box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+//         z-index: 1;
+//     }
+//     .action-dropdown-ul.active {
+//         transform: rotateX(0deg);
 
-    }
-    .action-dropdown-ul li { 
-        list-style: none;
-        font-family: $oxygen;
-        font-size: 14px;
-        font-weight: bolder;
-        width: 100%;
-        display:block;
-        padding: 8px 30px;
-        text-align: center;
-        text-decoration: none;
-        background: #f8f8f8;
-        color: #000;
-        cursor: pointer;
-        text-align: left;
-        z-index: 1;
-    }
-    .action-dropdown-ul li:hover { 
-        background-color: #f1f1f1;
-    }
-    .show-header-title {
-        display: flex;
-        outline-style: none;
-        width: 100%;
-        font-size: 20px;
-        padding-bottom: 14px;
-        letter-spacing: 0.1rem;
-        span {
-            padding-right: 10px;
-            vertical-align: text-top;
-        }
-    }
+//     }
+//     .action-dropdown-ul li { 
+//         list-style: none;
+//         font-family: $oxygen;
+//         font-size: 14px;
+//         font-weight: bolder;
+//         width: 100%;
+//         display:block;
+//         padding: 8px 30px;
+//         text-align: center;
+//         text-decoration: none;
+//         background: #f8f8f8;
+//         color: #000;
+//         cursor: pointer;
+//         text-align: left;
+//         z-index: 1;
+//     }
+//     .action-dropdown-ul li:hover { 
+//         background-color: #f1f1f1;
+//     }
+//     .show-header-title {
+//         display: flex;
+//         outline-style: none;
+//         width: 100%;
+//         font-size: 20px;
+//         padding-bottom: 14px;
+//         letter-spacing: 0.1rem;
+//         span {
+//             padding-right: 10px;
+//             vertical-align: text-top;
+//         }
+//     }
    
-    }
+//     }
 
-    .notebook-show-subheader {
-        display: flex;
-        font-size: 14px;
-        align-items: flex-start;
-        justify-content: space-between;
+//     .notebook-show-subheader {
+//         display: flex;
+//         font-size: 14px;
+//         align-items: flex-start;
+//         justify-content: space-between;
+//     }
+//     .notebook-show-collection-wrapper {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         justify-content: center;
+//         overflow: hidden;
+//         color: red;
+//         font-size: 16px;
+//         // padding: 0 50px;
+//         // position: absolute;
+//         .notebook-show-collection {
+//             overflow: scroll;
+//             position: relative;
+//             width: 370px;
+//             // height: 833px;
+//         }
+//         .notebook-show-collection > li {
+//             padding: 20px 20px 30px 20px;
+//             color: green;
+//             list-style: none;
+//             height: 120px;
+//             position: sticky;
+//             // display: flex;
+//             overflow:hidden;
+//             text-overflow: ellipsis;    
+//             border-bottom: 1px solid #e6e6e6;
+//             font-size: 14px;
+//             color: #737373;
+//         }
+//         .notebook-show-collection > li:hover {
+//             background-color: #fff;
+//         }
+
+//         .notebook-show-note-title {
+//             padding-bottom: 5px;
+//             color: black
+//         }
+
+//     } 
+    
+    
+//     .testnote {
+//         // grid-column-start: -2;
+   
+//     }
+        
+// }
+    
+
+.notebook-show{
+    display:flex;
+    align-items: center;
+    // justify-content: center;
+    height:100vh;
+}
+
+.sidenavbar {
+    font-family: $oxygen;
+    width: 240px;
+    background: #1a1a1a;
+    display: flex;
+    flex-direction: column;
+    color: #ccc;
+    height: 100%;
+    p {
+        cursor: pointer;
     }
-    .notebook-show-collection-wrapper {
+    .sidenavbar-top {
+        flex: 1;
+        .sidenavbar-top-profile {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 15px;
+            .sidenavbar-profile-icon {
+                background: #f8cbad;
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                color: #000;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-right: 10px
+            }
+            .sienavbar-profile-title {
+                display: flex;
+                align-items: center;
+                flex: 1;
+            }
+            .sidenavbar-icon {
+                margin: 0 10px;
+                font-size: 12px
+            }
+        }
+
+        .sidenavbar-top-search {
+            padding: 15px;
+            .sidenavbar-search-icon{
+                font-size: 20px;
+            }
+            .search-block {
+                display: flex;
+                align-items: center;
+                background: #404040;
+                padding: 8px 10px;
+                border-radius: 50px;
+            }
+            input {
+                color: #fff;
+                margin-left: 10px;
+                background: none;
+                outline: none;
+                border: none;
+            }
+        }
+
+        .sidenavbar-top-create-note {
+            padding: 0 15px;
+            color: #fff;
+            .create-note-btn{
+                display: flex;
+                align-items: center;
+                background: rgb(195, 93, 71);
+                padding: 8px 10px;
+                border-radius: 50px;
+                cursor: pointer;
+                .sidenavbar-plus-icon{
+                    font-size: 12px;
+                }
+                .new-note{
+                    margin-left: 10px;
+                }
+            }
+        }
+
+
+        .sidenavbar-top-menu-item {
+            margin-top: 10px;
+            ul {
+                li {
+                    display: flex;
+                    align-items: center;
+                    padding: 10px 18px;
+                    color: #ccc;
+                    text-decoration: none;
+                    .menu-btn-icon {
+                        text-decoration: none;
+                        font-size: 14px;
+                        margin-right: 8px
+                    }
+                    a {
+                        color: #ccc;
+                        text-decoration: none;
+                    }
+                    &:hover {
+                        cursor: pointer;
+                        background: #404040
+                    }
+                    &.active {
+                        background: #404040
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+//NOTE LIST
+
+.note-list {
+    height: 100%;
+    width: 380px;
+    max-width: 670px;
+    min-width: 196px;
+    background: #f8f8f8;
+    border-right: 1px solid #e6e6e6;
+    display: flex;
+    flex-direction: column;
+    font-family: $oxygen;
+    .note-list-header {
+        padding: 5px 25px;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-        color: red;
-        font-size: 16px;
-        // padding: 0 50px;
-        // position: absolute;
-        .notebook-show-collection {
-            overflow: scroll;
-            position: relative;
-            width: 370px;
-            // height: 833px;
+        align-items: flex-start;
+        height: 100px;
+        box-sizing: border-box;
+        border-bottom: 1px solid #ccc;
+        .note-list-header-title {
+            width: 100%;
+            flex: 1;
+            h1 {
+                margin: 15px 0 20px;
+                font-size: 20px;
+            }
+            
+            .note-list-header-sub {
+                width: 100%;
+                margin: 5px;
+                font-size: 14px;
+            }
         }
-        .notebook-show-collection > li {
-            padding: 20px 20px 30px 20px;
-            color: green;
-            list-style: none;
+    }
+    .note-list-body {
+        flex: 1;
+        overflow: auto;
+        .note-card {
             height: 120px;
-            position: sticky;
-            // display: flex;
-            overflow:hidden;
-            text-overflow: ellipsis;    
-            border-bottom: 1px solid #e6e6e6;
+            padding: 20px 25px;
+            display: flex;
+            flex-direction: column;
+            border: 1px solid #e6e6e6;
+            text-decoration: none;
+            .note-card-head {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                flex: 1;
+                font-size: 14px;
+                .note-card-title {
+                    width: 100%;
+                    color: #333;
+                    font-weight: bold;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+                .note-card-desc {
+                    width: 100%;
+                    color: #737373;
+                    margin-top: 5px;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+            }
+            .note-card-date {
+                color: #4d4d4d;
+                font-size: 13px;
+            }
+            &:hover {
+                cursor: pointer;
+                background: #fff;
+            }
+            &.active {
+                background: #fff;
+            }
+        }
+    }
+
+}
+
+//NOTE SHOW
+
+.note {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    height: 100%;
+    .note-header {
+        height: 100px;
+        width: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        padding: 20px;
+        box-sizing: border-box;
+        border-bottom: 1px solid #e6e6e6;
+        .note-header-date {
             font-size: 14px;
             color: #737373;
         }
-        .notebook-show-collection > li:hover {
-            background-color: #fff;
-        }
-
-        .notebook-show-note-title {
-            padding-bottom: 5px;
-            color: black
-        }
-
+        // .note-header-action-btn {
+        //     display: flex;
+        //     .action-btn {
+        //         color: #737373;
+        //         font-size: 14px;
+        //         opacity: 0.5px;
+        //         margin: 0 10px;
+                // &:hover{
+                //     opacity: 1;
+                //     cursor: pointer;
+                // }
+        //     }
+        // }
     }
-    
-
-   
+    .note-body {
+        flex: 1;
+        padding: 20px;
+        .note-body-head {
+            input {
+                padding: 10px;
+                font-size: 30px;
+                border: none;
+                outline: none;
+                width: 100%;
+            }
+        }
+        .note-body-content {
+            textarea {
+                // min-height: 60vh;
+                // max-height: 65vh;
+                // min-width: 620px;
+                // max-width: 100vh;
+                height: 600px;
+                width: 100%;
+                padding: 10px;
+                font-size: 16px;
+                border: none;
+                outline: none;
+                resize: none;
+            }
+        }
+    }
 }
