--- a/app/assets/stylesheets/components/notebooks/notebook_index.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap');
 $oxygen: 'Oxygen';
-.notebook {
+.notebook_index {
     font-family: $oxygen;
     width: 98.5%;
     display: grid;
