--- a/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
@@ -1,29 +1,28 @@
 
 .sidebar {
-    position: static;
-    height: 100%;
-    // display: flex;
+    height: 150vh;
+    // position: sticky;
+    display: flex;
     max-width: 60px;
-    // overflow: hidden;
-    background: #000;
+    background: #1a1a1a;
     flex-direction: column;
-    color: white;
-    // height: 200vh;
-    // display: grid; 
+    color: #ccc;
+    position: fixed;
+    float: left;
     .sidebar-user {
         height: 56px;
         display: flex;
         cursor: pointer;
         padding-left: 10px;
         align-items: center;
-        span {
+        .user-initial {
             justify-content: center;
             vertical-align: middle;
             width: 38px;
             height: 38px;
             padding-left: 1px;
             background: rgb(130, 190, 194);
-            border: 3px solid #000;
+            border: 3px solid #1a1a1a;
             color: darkgrey;
             text-align: center;
             text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
@@ -34,13 +33,14 @@
     .buttons-1 {
         margin-left: 10px;
         margin-bottom: 10px;
+        padding-top: 10px;
         .sidebar-search {  
             cursor: pointer;
             width: 38px;
             height: 38px;
             padding-left: 4px;
             padding-top: 5px;
-            border: 3px solid #000;
+            border: 3px solid #1a1a1a;
             background: #404040;
             color: darkgrey;
             text-align: center;
@@ -52,7 +52,7 @@
             cursor: pointer;
             width: 38px;
             height: 38px;
-            border: 3px solid #000;
+            border: 3px solid #1a1a1a;
             background: rgb(195, 93, 71);
             color: darkgrey;
             text-align: center;
