add delete button to notebook - not functional

--- a/app/assets/stylesheets/components/notebooks/create_notebook_modal.scss
+++ b/app/assets/stylesheets/components/notebooks/create_notebook_modal.scss
@@ -4,6 +4,7 @@ $oxygen: 'Oxygen';
 .modal {
     outline-style: none;
     position: absolute;
+    font-family: $oxygen;
     top: 0;
     left: 0;
     height: 100%;
