complete notebook functionality, add styling elements

--- a/app/assets/stylesheets/components/notebooks/notebook_index.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index.scss
@@ -95,7 +95,7 @@ $oxygen: 'Oxygen';
 .notebook-table {
     border-top: 2px solid #5b6b70;
     overflow: scroll;
-    height: 100vh;
+    // height: 100vh;
     font-size: 14px;
     font-family: $oxygen;
     margin-left: 20px;
