compelte initial build of note backend

--- a/app/assets/stylesheets/components/notebooks/notebook_index_item.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index_item.scss
@@ -16,8 +16,7 @@ $oxygen: 'Oxygen';
         padding: .5rem;
         text-align: end;
         .ellipsis-icon {
-            // color: #737373;
-            color: green;
+            color: #737373;
             font-weight: light;
             font-size: 14px
         };
