styling changes, add new note functionality

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,4 +26,5 @@
  @import './components/notebooks/notebook_index.scss';
  @import './components/notebooks/notebook_index_item.scss';
  @import './components/notebooks/create_notebook_modal.scss';
- @import './components//sidebar/reduced_sidebar.scss'
+ @import './components//sidebar/reduced_sidebar.scss';
+ @import './components//sidebar/expanded_sidebar.scss'
