Improve note updating functionality, note views

--- a/app/assets/stylesheets/components/notebooks/notebook_index.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index.scss
@@ -135,7 +135,7 @@ $oxygen: 'Oxygen';
     .sort-body{
         position: relative;
         box-sizing: border-box;
-        direction: ltr;
+        // direction: ltr;
         height: auto;        
     }
 
