--- a/app/assets/stylesheets/components/notebooks/notebook_index_item.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_index_item.scss
@@ -28,6 +28,7 @@ $oxygen: 'Oxygen';
             cursor: pointer;
             color: #000;
         }
+        //problem child
         .action-dropdown-ul {
             position: absolute;
             display: hidden;
