--- a/app/assets/stylesheets/components/session/splash_header.scss
+++ b/app/assets/stylesheets/components/session/splash_header.scss
@@ -1,4 +1,3 @@
-
 // .header_div {
 //     display: flex;
 //     align-items: flex-end;
@@ -7,25 +6,29 @@
 // }
 
 .splash-header {
+  display: flex;
+  justify-content: space-between;
+  .splash-img {
     display: flex;
-    justify-content: space-between;
-    .splash-img {
-            display: flex;
-            width: 150px;
-            margin-top: 5px;
-            margin-left: 20px;
-            // height: 100px;
+    width: 150px;
+    margin-top: 5px;
+    margin-left: 20px;
+    // height: 100px;
+  }
+  .splash-header-buttons {
+    // margin-left: 35%;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    // justify-content: space-evenly;
+    align-items: flex-end;
+    padding-top: 5px;
+    padding-right: 20px;
+    font-size: 30px;
+    a {
+        color: black;
+        text-decoration: none;
     }
-    .splash-header-buttons {
-        // margin-left: 35%;
-        display: flex;
-        flex-direction: row;
-        // justify-content: space-evenly;
-        align-items: flex-end;
-        padding-top: 5px;
-        padding-right: 20px;
-        font-size: 30px;
-
-    }
-
+  }
 }
