--- a/app/assets/stylesheets/components/sidebar/expanded_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/expanded_sidebar.scss
@@ -24,7 +24,7 @@ $oxygen: 'Oxygen';
                 height: 38px;
                 margin-right: 10px;
                 // padding-left: 2px;
-                background: rgb(130, 190, 194);
+                // background: rgb(130, 190, 194);
                 border: 3px solid #1a1a1a;
                 color: darkgrey;
                 text-align: center;
